--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:concurrency": "node scripts/test-concurrency.js",
     "type-check": "tsc --noEmit",
     "prepare": "husky install"
   },
