phase-6: insurance and claims - Complete insurance product selection, claims workflow, admin management, and testing infrastructure

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,12 @@ STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 DPO_COMPANY_TOKEN=
 
+# Webhook Secrets (Production)
+AIRTEL_MONEY_WEBHOOK_SECRET=
+MTN_MOMO_WEBHOOK_SECRET=
+STRIPE_WEBHOOK_SECRET=
+DPO_WEBHOOK_SECRET=
+
 # Maps & Location (for future phases)
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 
