--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.553.0",
     "multer": "^2.0.2",
     "next": "^14.0.3",
     "prisma": "^6.18.0",
