--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "bcryptjs": "^3.0.3",
+    "chart.js": "^4.5.1",
     "clsx": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
@@ -32,6 +33,7 @@
     "next": "^14.0.3",
     "prisma": "^6.18.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
     "typescript": "^5.2.2",
