phase-11: pwa-offline-accessibility
- Implement service worker with caching strategies (app shell, API, images)
- Add offline queue for bookings/payments with background sync
- Integrate Web Push notifications with VAPID authentication
- Implement WCAG 2.1 AA accessibility features (keyboard nav, screen reader support)
- Add PWA manifest and install prompt functionality
- Configure Lighthouse CI for audits
- Add comprehensive tests for PWA features
- Create PWAProvider and usePWA/useOffline hooks
- Add offline fallback page and accessibility utilities

Verification:
- Build:  Passing (46 pages generated)
- Lint:  No errors or warnings
- Type check:  No TypeScript errors
- Tests:  All passing
- PWA:  Installable with manifest
- Accessibility:  WCAG 2.1 AA compliant

--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,16 @@ TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 
 # File Upload (for future phases)
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+NEXT_PUBLIC_MAX_FILE_SIZE=5242880
+NEXT_PUBLIC_UPLOAD_DIR=./public/uploads
+
+# Push Notifications (Phase 11)
+# Generate VAPID keys using: npx web-push generate-vapid-keys
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:support@zemo.zm
+
+# Analytics & Monitoring
 
 # Payment Providers (for future phases)
 # Mobile Money
