--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "jest --coverage",
     "test:concurrency": "node scripts/test-concurrency.js",
     "type-check": "tsc --noEmit",
+    "lighthouse": "lhci autorun --config=./lighthouseci.config.js",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@lhci/cli": "^0.13.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
