Add Vercel deployment guide and pre-deployment checker
- Created DEPLOYMENT.md with step-by-step Vercel deployment instructions
- Added pre-deploy-check.js script to validate deployment readiness
- Added npm scripts: deploy:check and deploy:prepare
- Includes database setup, environment variables, and troubleshooting

Deployment Features:
 Complete Vercel setup guide
 Environment variables checklist
 Database migration instructions
 Custom domain configuration
 Automated pre-deployment validation
 Post-deployment checklist

Ready for one-click Vercel deployment from GitHub!

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:concurrency": "node scripts/test-concurrency.js",
     "type-check": "tsc --noEmit",
     "lighthouse": "lhci autorun --config=./lighthouseci.config.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy:check": "node scripts/pre-deploy-check.js",
+    "deploy:prepare": "npm run deploy:check && git push origin main"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
