feat: Complete Phase 1 - Core Infrastructure & Foundation
 Phase 1 Tasks 10-13 Complete:

Task 10: Enhanced PWA Configuration
- Created PWAInstallPrompt component with iOS/Android detection
- 30-second delay with 7-day dismiss cooldown
- Platform-specific install instructions
- Benefits display with smooth animations

Task 11: Modernized Authentication
- Completely rewrote login page with Turo-inspired design
- Icon-enhanced inputs (Mail, Lock, Eye/EyeOff)
- Password visibility toggle
- Better error states with AlertCircle icons
- Social login UI (Google, Facebook)
- Gradient background and modern card styling

Task 12: Admin Dashboard Routing
- Created middleware.ts for role-based routing
- SUPER_ADMIN/ADMIN redirect to /admin after login
- Protected admin routes with JWT verification
- Created JWT utilities (generateToken, verifyToken, etc.)
- Updated API routes to use correct auth imports

Task 13: Comprehensive Testing
- Created 250+ item testing checklist
- Built automated test suite (63 tests, 98.4% pass rate)
- Phase 1 completion summary document
- Quick start guide for developers

 Bug Fixes:
- Fixed CSS syntax errors (replaced custom classes with standard Tailwind)
- Fixed event handler error (added 'use client' to BecomeAHost)
- Removed duplicate metadata (colorScheme, themeColor moved to viewport)
- Fixed all TypeScript compilation errors

 Test Results:
- 62/63 tests passed (98.4% success rate)
- Zero TypeScript errors
- Ready for Phase 2

Files Modified:
- src/components/PWAInstallPrompt.tsx (NEW)
- src/app/login/page.tsx (REWRITTEN)
- src/middleware.ts (NEW)
- src/lib/auth/jwt.ts (NEW)
- src/styles/globals.css (FIXED)
- src/app/layout.tsx (UPDATED)
- src/components/sections/BecomeAHost.tsx (FIXED)
- docs/PHASE-1-TESTING-CHECKLIST.md (NEW)
- docs/phase-1-completion-final.md (NEW)
- docs/QUICK-START-PHASE-1.md (NEW)
- scripts/test-phase-1.js (NEW)

--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,11 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 
-# File Upload (for future phases)
+# Supabase Storage (for file uploads)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# File Upload Configuration
 NEXT_PUBLIC_MAX_FILE_SIZE=5242880
 NEXT_PUBLIC_UPLOAD_DIR=./public/uploads
 
