--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "typescript": "^5.2.2",
     "zod": "^4.1.12"
   },
+  "optionalDependencies": {
+    "@supabase/supabase-js": "^2.29.0",
+    "web-push": "^3.5.0"
+  },
   "devDependencies": {
     "@lhci/cli": "^0.13.0",
     "@testing-library/jest-dom": "^6.1.4",
