Phase 2: Complete Host Experience & Vehicle Management
- Implemented vehicle edit page with dual-mode wizard support
- Created calendar management system (2 pages: visual calendar + blocked dates)
- Built earnings management system (4 pages: overview, transactions, payout methods, tax docs)
- Added supporting pages: reviews, insurance, help center, vehicle performance
- Enhanced vehicle listing wizard to support both create and edit modes
- Created pre/post-trip inspection system with 49-item checklist and PDF reports
- Added database schema for extras, inspections, and rental agreements
- Fixed all 27 TypeScript/ESLint errors (type safety, React hooks, code style)
- Implemented proper error handling and loading states across all pages
- Updated Header component with new host navigation items

New Files:
- src/app/host/vehicles/[id]/edit/page.tsx
- src/app/host/calendar/page.tsx (389 lines)
- src/app/host/calendar/blocked/page.tsx
- src/app/host/earnings/page.tsx (240 lines)
- src/app/host/earnings/transactions/page.tsx
- src/app/host/earnings/payout-methods/page.tsx
- src/app/host/earnings/tax-documents/page.tsx
- src/app/host/reviews/page.tsx
- src/app/host/insurance/page.tsx
- src/app/host/help/page.tsx
- src/app/host/vehicles/performance/page.tsx
- src/app/bookings/[id]/pre-trip-inspection/page.tsx (452 lines)
- src/app/bookings/[id]/post-trip-inspection/page.tsx (478 lines)
- src/lib/agreements/rental-agreement-template.ts (432 lines)

Phase 2 Status: 90% Complete
Remaining: Document verification enhancement, rental agreement PDF generation

--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
     "clsx": "^2.0.0",
+    "jose": "^6.1.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "multer": "^2.0.2",
     "next": "^14.0.3",
     "prisma": "^6.18.0",
+    "puppeteer": "^24.31.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
