Phase 2 COMPLETE: Document Verification & PDF Generation
 ALL PHASE 2 REQUIREMENTS IMPLEMENTED

## Document Verification System
- Renter verification page with document upload (LICENSE, NATIONAL_ID, PASSPORT, SELFIE, PROOF_OF_ADDRESS)
- Host verification page (existing, enhanced)
- Admin document review interface with approve/reject workflow
- Real-time document status tracking (NOT_UPLOADED, UPLOADED, UNDER_REVIEW, APPROVED, REJECTED)
- Verification badges for approved users
- OCR integration with Tesseract.js for automatic data extraction
- Document expiry validation
- Secure document storage in Supabase private bucket

## PDF Generation System
- Rental agreement PDF generation using jsPDF
- Professional multi-page PDF layout with proper formatting
- Booking inspection report PDF generation
- Automatic PDF upload to Supabase Storage
- PDF download functionality for users
- Agreement data population from booking details

## Database Schema Updates
- Added Document model with verification workflow
- Added UserDocumentType enum (9 types)
- Added DocumentStatus enum (5 states)
- Added isVerified field to User model
- Created migration: 20251128124916_add_document_verification_system

## API Routes Created
- POST /api/profile/documents/upload - Upload user documents
- GET /api/profile/documents - Get user's documents
- GET /api/admin/documents - List all documents for review
- POST /api/admin/documents/[id]/verify - Approve/reject documents
- Updated POST /api/bookings/[id]/agreement - Generate PDF agreements

## Features
- Multi-document upload with drag & drop
- Real-time upload progress
- Document preview and re-upload
- OCR data extraction from licenses and IDs
- License expiry validation
- Admin verification workflow with rejection reasons
- Email notifications (prepared, implementation pending)
- Automatic user verification status update
- Professional PDF generation with proper layout
- Secure document access control

## Tech Stack
- jsPDF: PDF generation
- Tess

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.0.0",
     "jose": "^6.1.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.553.0",
     "multer": "^2.0.2",
     "next": "^14.0.3",
@@ -49,6 +50,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
+    "tesseract.js": "^6.0.1",
     "typescript": "^5.2.2",
     "zod": "^4.1.12"
   },
