Phase 3: Complete Renter Experience & Booking System
- Implemented advanced search with filters, map view, and location autocomplete
- Built comprehensive vehicle detail pages with photo galleries
- Created complete booking flow with payment integration (Stripe & Flutterwave)
- Added real-time messaging system between hosts and renters
- Implemented multi-channel notification system (in-app, email, push)
- Built reviews and ratings system with two-way reviews
- Added trip modification features (extensions, early returns, late returns)
- Fixed TypeScript errors and build issues
- Added Google Maps types for map view functionality
- Improved payment service initialization for build compatibility
- All type checks passing, linting clean, build successful

--- a/.env.example
+++ b/.env.example
@@ -86,8 +86,11 @@ MTN_MOMO_WEBHOOK_SECRET=
 STRIPE_WEBHOOK_SECRET=
 DPO_WEBHOOK_SECRET=
 
-# Maps & Location (for future phases)
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
+# Maps & Location (Phase 3 - REQUIRED for location search)
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Cron Jobs (Phase 3 - Late Return Detection)
+CRON_SECRET=generate-random-secret-for-cron-authentication
 
 # Email (for future phases)
 RESEND_API_KEY=
