--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@stripe/stripe-js": "^8.5.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
@@ -38,6 +40,7 @@
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
     "clsx": "^2.0.0",
+    "flutterwave-node-v3": "^1.3.0",
     "jose": "^6.1.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
@@ -49,6 +52,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^2.0.0",
     "tesseract.js": "^6.0.1",
     "typescript": "^5.2.2",
@@ -63,6 +67,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/google.maps": "^3.58.1",
     "@types/jest": "^29.5.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
