Fix: Change cron schedule to daily (Vercel Hobby plan compatible)

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "crons": [
     {
       "path": "/api/cron/check-late-returns",
-      "schedule": "0 * * * *"
+      "schedule": "0 0 * * *"
     }
   ],
   "headers": [
